--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "devDependencies": {
     "autoprefixer": "^9.7.6",
     "postcss-cli": "^7.1.0",
+    "prettier": "2.0.4",
     "tailwind.macro": "^1.0.0-alpha.10"
   }
 }
